do280/app/deployment-patch.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: custom
  namespace: some
  labels:
    app: custom
spec:
  replicas: 4
  template:
    spec:
      containers:
        - image: registry.access.redhat.com/ubi9/httpd-24
          imagePullPolicy: IfNotPresent
          name: web
          ports:
          - containerPort: 8080
            protocol: TCP
          - containerPort: 8443
            protocol: TCP
          resources:
            requests:
              cpu: 5m
              memory: 50Mi
