do280/app/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: custom
  namespace: some
  labels:
    app: custom
spec:
  replicas: 3
  selector:
    matchLabels:
      app: custom
  template:
    metadata:
      labels:
        app: custom
    spec:
      containers:
        - name: web
          image: registry.access.redhat.com/ubi9/httpd-24
          ports:
            - containerPort: 8080
              protocol: TCP
            - containerPort: 8443
        - name: db
          image: registry.access.redhat.com/rhscl/mysql-80-rhel7
          ports:
            - containerPort: 3306
              protocol: TCP
