do280/app/route.yml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: myroute
  namespace: some
spec:
  to:
    kind: Service
    name: myservice
